--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,16 @@
         <activity
             android:name=".ShowInfoAboutTvElement">
         </activity>
+
+        <activity android:name=".SearchActivity"
+            android:parentActivityName=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
