--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
@@ -23,14 +24,17 @@
         </activity>
 
         <activity
-            android:name=".ShowInfoAboutListElement">
+            android:name=".ShowInfoAboutListElement"
+            android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".ShowInfoAboutTvElement">
+            android:name=".ShowInfoAboutTvElement"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity android:name=".SearchActivity"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
