--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,19 +32,17 @@
             android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name=".SearchActivity"
-            android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait">
+
+        <activity android:name=".SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
-            <meta-data
-                android:name="android.app.default_searchable"
-                android:value=".SearchActivity" />
         </activity>
+
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
