--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:screenOrientation="portrait"
-            android:name=".SplashScreen"
+            android:name=".Classes.SplashScreen"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -23,7 +23,7 @@
             android:resource="@xml/searchable" />
         </activity>
 
-        <activity android:name=".AndroidDatabaseManager"
+        <activity android:name="database.AndroidDatabaseManager"
             android:label="@string/app_label"/>
 
         <activity
@@ -33,16 +33,16 @@
         </activity>
 
         <activity
-            android:name=".ShowInfoAboutListElement"
+            android:name=".Classes.ShowInfoAboutListElement"
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".ShowInfoAboutTvElement"
+            android:name=".Classes.ShowInfoAboutTvElement"
             android:screenOrientation="portrait">
         </activity>
 
 
-        <activity android:name=".SearchActivity"
+        <activity android:name=".Classes.SearchActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
