--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,15 +31,20 @@ dependencies {
     })
     compile files('libs/picasso-2.5.2.jar')
 
+    //compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.25.0'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    //compile 'com.firebaseui:firebase-ui:2.2.0'
     testCompile 'junit:junit:4.12'
-    
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
