--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.firebaseui:firebase-ui:1.1.1'
+    compile 'com.firebase:firebase-jobdispatcher:0.5.2'
 
     testCompile 'junit:junit:4.12'
 }
